v0.18.1/_sources/_generated/groups/default.rst.txt
Default
=======

This section details Default-related Linode CLI commands.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON
.. _commands_default_ip-list:

`ip-list <https://techdocs.akamai.com/linode-api/reference/get-vpcs-ips>`_
--------------------------------------------------------------------------


Returns a paginated list of all VPC IP addresses and address ranges on your account.

.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli vpcs ip list






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Filterable Attributes

.. rst-class:: action-subheading-description

Arguments used to define a filter for response entries.




.. rst-class:: action-filterable-field-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`\-\-active`
      - :action-table-field-type:`bool`
      - Returns :code:`true` if the VPC interface is in use, meaning that the Linode was powered on using the :code:`config_id` to which the interface belongs.

    * - :action-table-field-name:`\-\-config_id`
      - :action-table-field-type:`int`
      - The globally general entity identifier for the Linode configuration profile where the VPC is included.

    * - :action-table-field-name:`\-\-linode_id`
      - :action-table-field-type:`int`
      - The identifier for the Linode the VPC interface currently belongs to.

    * - :action-table-field-name:`\-\-region`
      - :action-table-field-type:`str`
      - The region of the VPC.

    * - :action-table-field-name:`\-\-vpc_id`
      - :action-table-field-type:`int`
      - The unique globally general API entity identifier for the VPC.






.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`active` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - Returns :code:`true` if the VPC interface is in use, meaning that the Linode was powered on using the :code:`config_id` to which the interface belongs.

    * - :action-table-field-name:`address` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`192.0.2.141`
      - An IPv4 address configured for this VPC interface.

    * - :action-table-field-name:`address_range` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`N/A`
      - A range of IPv4 addresses configured for this VPC interface.

    * - :action-table-field-name:`config_id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`4567`
      - The globally general entity identifier for the Linode configuration profile where the VPC is included.

    * - :action-table-field-name:`gateway` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`192.0.2.1`
      - The default gateway for the VPC subnet that the IP or IP range belongs to.

    * - :action-table-field-name:`interface_id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`2435`
      - The globally general API entity identifier for the Linode interface.

    * - :action-table-field-name:`linode_id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`123`
      - The identifier for the Linode the VPC interface currently belongs to.

    * - :action-table-field-name:`nat_1_1` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`192.168.0.42`
      - The public IP address used for NAT 1:1 with the VPC.

    * - :action-table-field-name:`page` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`1`
      - The current `page <https://techdocs.akamai.com/linode-api/reference/pagination>`_.

    * - :action-table-field-name:`pages` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`1`
      - The total number of `pages <https://techdocs.akamai.com/linode-api/reference/pagination>`_.

    * - :action-table-field-name:`prefix` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`24`
      - The number of bits set in the :code:`subnet_mask`.

    * - :action-table-field-name:`region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east`
      - The region of the VPC.

    * - :action-table-field-name:`results` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`1`
      - The total number of results.

    * - :action-table-field-name:`subnet_id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`101`
      - The :code:`id` of the VPC Subnet for this interface.

    * - :action-table-field-name:`subnet_mask` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`255.255.255.0`
      - The mask that separates host bits from network bits for the :code:`address` or :code:`address_range`.

    * - :action-table-field-name:`vpc_id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`7654`
      - The unique globally general API entity identifier for the VPC.









